--- a/3ColumnPreviewCardComponent/package.json
+++ b/3ColumnPreviewCardComponent/package.json
@@ -1,5 +1,12 @@
 {
+  "scripts": {
+    "start": "npm run lite",
+    "lite": "lite-server"
+    },
   "devDependencies": {
     "lite-server": "^2.6.1"
+  },
+  "dependencies": {
+    "bootstrap": "^5.3.0"
   }
 }
